--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <meta name="description" content="University Skills Training">
+  <meta name="author" content="862277759">
 
-  <title>John Doe - Business Administration</title>
+  <title>Dinghai Peng - Business Administration</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Dinghai Peng</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+      <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/firstnamelastname.png" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Dinghai Peng
         </h1>
         <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <p class="lead mb-4">In the past, I was generally responsible for the accounting of current account, the operation of tax exemption and refund, the accounting and issuance of salary and the general taxpayer's overall account processing (collection of original information, filling out accounting vouchers, preparation of accounting reports, timely declaration of national tax and local tax, purchase and storage of sales invoices, certification of input invoices, annual inspection of industry and commerce and daily work analysis and management of the department) and daily management of the department. Strong adaptability to the environment, team spirit, solid bookkeeping skills and good verbal communication skills, solid computer fundamentals, familiar with Word, Excel, Power Point operations. He can effectively handle the relationship with the company's ministries and taxation, industry and commerce departments, and make reasonable use of the national taxation preferential policies to open source and save money for the company. In addition to this, he is also able to analyze the cost and budget in a timely manner to provide decision makers with a basis for decision making and rationalization suggestions.<br><br>
 
         Enter bio here<br><br>
 
         Enter bio here
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://steamcommunity.com/profiles/76561199092000087/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/PPPPDH">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://zen.ly/SpecialVeryNiceDiva">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="pengdinghai0912@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -89,29 +89,29 @@
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
         <h2 class="mb-5">Experience</h2>
-
+        
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
             <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <div class="subheading mb-3"><a target="_blank" href="https://Dell.com">Dell</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
+              • Developed websites for Dell Company<br> 
+              • Speaker at Local Talkshow<br>
               • Experience with HTML, CSS, Javascript, Photoshop<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">March 2021 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Illustrators</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://Apple.com">Apple</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Optimize the company's product introduction<br>
+              • Promote the company's product categories<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -122,13 +122,11 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Cashier</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">wholefoods</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Responsible for checking out customers<br>
+            • etc etc
 
           </p>
           </div>
@@ -156,7 +154,7 @@
             <div>MBA in International Business</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2017 - December 2018</span>
           </div>
         </div>
 
@@ -167,7 +165,7 @@
             <div>Project Management</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">June 2016</span>
           </div>
         </div>
 
@@ -178,7 +176,7 @@
             <div>Information Systems</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">August 2011 - May 2015</span>
           </div>
         </div>
 
@@ -191,7 +189,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/image1.jpeg" width="500px">
+            <img src="img/image2.jpeg" width="500px"><br>
+            <img src="img/image3.jpeg" width="500px">
+            <img src="img/image4.jpeg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +200,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Dinghai Peng</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
